--- a/tests/main.ipynb
+++ b/tests/main.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -16,9 +16,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "client = ai.Client()\n",
     "model = [\"openai:gpt-4o\", \"openai:gpt-4o-mini\"]\n",
@@ -63,19 +74,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
     "# topic_query = input(\"What is the final topic you want to write about? \")\n",
-    "topic_query = \"Top Digital Nomads Destinations in Asia\""
+    "topic_query = \"Top Digital Nomads Destinations in Asia\"\n",
+    "topic_query = \"How to Buy a House in Singapore as a Foreigner?\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Search results retrieved successfully.\n"
+     ]
+    }
+   ],
    "source": [
     "base_url = \"https://serpapi.com/search.json\"\n",
     "params = {\n",
@@ -100,7 +120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -129,7 +149,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -173,18 +193,63 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "https://api.semrush.com/?type=url_organic&key=cde4f7ee33018efbf83128a179c13a83&display_limit=50&export_columns=Ph,Po,Nq,Cp,Co&url=https://www.reddit.com/r/digitalnomad/comments/vl38d1/which_country_place_in_asia_is_the_best_for/&database=us&display_filter=%2B%7CPo%7CLt%7C50&display_sort=po_asc\n",
+      "b'Keyword;Position;Search Volume;CPC;Competition\\r\\nbest places to work remotely in asia;1;40;0.00;0.00\\r\\n'\n",
+      "https://api.semrush.com/?type=url_organic&key=cde4f7ee33018efbf83128a179c13a83&display_limit=50&export_columns=Ph,Po,Nq,Cp,Co&url=https://www.lostcoconuts.com/best-destinations-southeast-asia-digital-nomads/&database=us&display_filter=%2B%7CPo%7CLt%7C50&display_sort=po_asc\n",
+      "b'Keyword;Position;Search Volume;CPC;Competition\\r\\nbest places to work remotely in asia;6;40;0.00;0.00\\r\\n'\n",
+      "https://api.semrush.com/?type=url_organic&key=cde4f7ee33018efbf83128a179c13a83&display_limit=50&export_columns=Ph,Po,Nq,Cp,Co&url=https://www.goatsontheroad.com/digital-nomad-cities-asia/&database=us&display_filter=%2B%7CPo%7CLt%7C50&display_sort=po_asc\n",
+      "b'Keyword;Position;Search Volume;CPC;Competition\\r\\nbest places to work remotely in asia;9;40;0.00;0.00\\r\\n'\n",
+      "https://api.semrush.com/?type=url_organic&key=cde4f7ee33018efbf83128a179c13a83&display_limit=50&export_columns=Ph,Po,Nq,Cp,Co&url=https://www.thedigitalnomad.asia/&database=us&display_filter=%2B%7CPo%7CLt%7C50&display_sort=po_asc\n",
+      "b'ERROR 50 :: NOTHING FOUND\\n'\n",
+      "https://api.semrush.com/?type=url_organic&key=cde4f7ee33018efbf83128a179c13a83&display_limit=50&export_columns=Ph,Po,Nq,Cp,Co&url=https://nomadsembassy.com/best-digital-nomad-cities-in-asia/&database=us&display_filter=%2B%7CPo%7CLt%7C50&display_sort=po_asc\n",
+      "b'Keyword;Position;Search Volume;CPC;Competition\\r\\nbest places to work remotely in asia;3;40;0.00;0.00\\r\\n'\n",
+      "https://api.semrush.com/?type=url_organic&key=cde4f7ee33018efbf83128a179c13a83&display_limit=50&export_columns=Ph,Po,Nq,Cp,Co&url=https://www.creimermanlaw.com/post/top-southeast-asian-destinations-for-expats-and-digital-nomads-in-2024&database=us&display_filter=%2B%7CPo%7CLt%7C50&display_sort=po_asc\n",
+      "b'ERROR 50 :: NOTHING FOUND\\n'\n",
+      "https://api.semrush.com/?type=url_organic&key=cde4f7ee33018efbf83128a179c13a83&display_limit=50&export_columns=Ph,Po,Nq,Cp,Co&url=https://guide.genki.world/easy-travel-planning-for-asia/&database=us&display_filter=%2B%7CPo%7CLt%7C50&display_sort=po_asc\n",
+      "b'ERROR 50 :: NOTHING FOUND\\n'\n"
+     ]
+    }
+   ],
    "source": [
     "df_results['SEMRush_Data'] = df_results['Link'].apply(get_semrush_data)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "https://www.reddit.com/r/digitalnomad/comments/vl38d1/which_country_place_in_asia_is_the_best_for/\n",
+      "https://api.semrush.com/?type=url_organic&key=cde4f7ee33018efbf83128a179c13a83&display_limit=50&export_columns=Ph,Po,Nq,Cp,Co&url=https://www.reddit.com/r/digitalnomad/comments/vl38d1/which_country_place_in_asia_is_the_best_for/&database=us&display_filter=%2B%7CPo%7CLt%7C50&display_sort=po_asc\n",
+      "b'Keyword;Position;Search Volume;CPC;Competition\\r\\nbest places to work remotely in asia;1;40;0.00;0.00\\r\\n'\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "[{'Keyword': 'best places to work remotely in asia',\n",
+       "  'Position': '1',\n",
+       "  'Search Volume': '40',\n",
+       "  'CPC': '0.00',\n",
+       "  'Competition': '0.00'}]"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "test_url = df_results.iloc[0]['Link']\n",
     "print(test_url)\n",
@@ -193,16 +258,131 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Position</th>\n",
+       "      <th>Link</th>\n",
+       "      <th>Title</th>\n",
+       "      <th>SEMRush_Data</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>https://www.reddit.com/r/digitalnomad/comments...</td>\n",
+       "      <td>Which country / place in Asia is the best for ...</td>\n",
+       "      <td>[{'Keyword': 'best places to work remotely in ...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2</td>\n",
+       "      <td>https://www.lostcoconuts.com/best-destinations...</td>\n",
+       "      <td>12 best destinations in Southeast Asia for dig...</td>\n",
+       "      <td>[{'Keyword': 'best places to work remotely in ...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>3</td>\n",
+       "      <td>https://www.goatsontheroad.com/digital-nomad-c...</td>\n",
+       "      <td>7 Best Digital Nomad Cities in Asia</td>\n",
+       "      <td>[{'Keyword': 'best places to work remotely in ...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>4</td>\n",
+       "      <td>https://www.thedigitalnomad.asia/</td>\n",
+       "      <td>Digital Nomad Asia</td>\n",
+       "      <td>[]</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>5</td>\n",
+       "      <td>https://nomadsembassy.com/best-digital-nomad-c...</td>\n",
+       "      <td>12 Best Digital Nomad Cities in Asia [2024 Edi...</td>\n",
+       "      <td>[{'Keyword': 'best places to work remotely in ...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>6</td>\n",
+       "      <td>https://www.creimermanlaw.com/post/top-southea...</td>\n",
+       "      <td>Top Southeast Asian Destinations for Expats an...</td>\n",
+       "      <td>[]</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>7</td>\n",
+       "      <td>https://guide.genki.world/easy-travel-planning...</td>\n",
+       "      <td>Asia made easy</td>\n",
+       "      <td>[]</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   Position                                               Link  \\\n",
+       "0         1  https://www.reddit.com/r/digitalnomad/comments...   \n",
+       "1         2  https://www.lostcoconuts.com/best-destinations...   \n",
+       "2         3  https://www.goatsontheroad.com/digital-nomad-c...   \n",
+       "3         4                  https://www.thedigitalnomad.asia/   \n",
+       "4         5  https://nomadsembassy.com/best-digital-nomad-c...   \n",
+       "5         6  https://www.creimermanlaw.com/post/top-southea...   \n",
+       "6         7  https://guide.genki.world/easy-travel-planning...   \n",
+       "\n",
+       "                                               Title  \\\n",
+       "0  Which country / place in Asia is the best for ...   \n",
+       "1  12 best destinations in Southeast Asia for dig...   \n",
+       "2                7 Best Digital Nomad Cities in Asia   \n",
+       "3                                 Digital Nomad Asia   \n",
+       "4  12 Best Digital Nomad Cities in Asia [2024 Edi...   \n",
+       "5  Top Southeast Asian Destinations for Expats an...   \n",
+       "6                                     Asia made easy   \n",
+       "\n",
+       "                                        SEMRush_Data  \n",
+       "0  [{'Keyword': 'best places to work remotely in ...  \n",
+       "1  [{'Keyword': 'best places to work remotely in ...  \n",
+       "2  [{'Keyword': 'best places to work remotely in ...  \n",
+       "3                                                 []  \n",
+       "4  [{'Keyword': 'best places to work remotely in ...  \n",
+       "5                                                 []  \n",
+       "6                                                 []  "
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "df_results"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -215,9 +395,56 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Keyword</th>\n",
+       "      <th>Search Volume</th>\n",
+       "      <th>Frequency</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>best places to work remotely in asia</td>\n",
+       "      <td>40</td>\n",
+       "      <td>4</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                Keyword Search Volume  Frequency\n",
+       "0  best places to work remotely in asia            40          4"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Count the occurrence of each keyword\n",
     "keyword_counts = Counter(all_keywords)\n",
@@ -243,12 +470,17 @@
     "# Combine the top keywords and top search volume keywords\n",
     "final_keywords = set(top_keywords + [keyword for keyword, _ in search_volume_keywords])\n",
     "\n",
-    "# Create a DataFrame with the final keywords and their search volumes\n",
+    "# Create a DataFrame with the final keywords, their search volumes, and frequencies\n",
     "final_keywords_df = pd.DataFrame(\n",
-    "    [(keyword, next((item['Search Volume'] for data in df_results['SEMRush_Data'] if data for item in data if item['Keyword'] == keyword), 0))\n",
+    "    [(keyword, \n",
+    "      next((item['Search Volume'] for data in df_results['SEMRush_Data'] if data for item in data if item['Keyword'] == keyword), 0),\n",
+    "      keyword_counts[keyword])\n",
     "     for keyword in final_keywords],\n",
-    "    columns=['Keyword', 'Search Volume']\n",
+    "    columns=['Keyword', 'Search Volume', 'Frequency']\n",
     ")\n",
+    "\n",
+    "# Sort the DataFrame by Frequency first, then by Search Volume\n",
+    "final_keywords_df = final_keywords_df.sort_values(by=['Frequency', 'Search Volume'], ascending=[False, False])\n",
     "\n",
     "# Return the DataFrame\n",
     "final_keywords_df\n"
